修复人脸注册和登陆

--- a/src/main/resources/templates/editPassword/editPassword.html
+++ b/src/main/resources/templates/editPassword/editPassword.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE HTML>
-<html style="height: auto;">
+<html style="height: auto;"
+	  xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -38,10 +39,10 @@
 			                 </div>
 			            </div>
 			              <!-- /.card-body -->
-	             <div class="card-footer col-md-3 col-md-offset-4" style="width:100%"align="center">
+	             <div class="card-footer col-md-3 col-md-offset-4" style="margin-left: 300px"align="center">
 	               <button type="button" class="btn btn-info" onclick="subPassword()">提交</button>
 	             </div>
-	             <div class="card-footer col-md-3 col-md-offset-4" id="tishi" style="text-align: center;color: red;font-size: 15px">
+	             <div class="card-footer col-md-3 col-md-offset-4" id="tishi" style="margin-left: 300px;text-align: center;color: red;font-size: 15px">
 									     
 						</div>
 	             <!-- /.card-footer -->
