--- a/src/main/resources/templates/document/document.html
+++ b/src/main/resources/templates/document/document.html
@@ -9,19 +9,28 @@
 	<meta http-equiv="expires" content="0" />
 	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3" />
 	<meta http-equiv="description" content="This is my page" />
+	<link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+	<link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+	<link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet" />
-	<link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet" />
+	<link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+	<link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
 	<script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
-	<script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}" src="../js/jquery-migrate-1.2.1.js"></script>
-	<link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"rel="stylesheet" type="text/css" />
-	<script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-	<script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-	<script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
-	<script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
+	<script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+			src="../js/jquery-migrate-1.2.1.js"></script>
+	<link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+		  href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+	<script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+			type="text/javascript"></script>
 	<script th:inline="javascript">
 		function download111(DocId){
 			window.location.href = "/document/download?DocId=" + DocId;
@@ -200,10 +209,10 @@
 									<!--					    	<input class="btn btn-primary btn-sm" type="submit"  value="搜索"/>-->
 									<!--					    	<input class="btn btn-danger btn-sm" type="button" id="delete" value="删除">-->
 									<div class="input-group w-25 p-1 hor-menu">
-										<input type="text" id="fileTitle" class="form-control shadow-sm bg-white rounded" placeholder="请输入搜索的标题" aria-describedby="button-addon4">
+										<input type="text" id="fileTitle" class="form-control shadow bg-white rounded" placeholder="请输入搜索的标题" aria-describedby="button-addon4">
 										<div class="" id="button-addon4">
-											<button onclick="searchDoc()" class="btn btn-primary btn-sm m-1" type="button">搜索</button>
-											<button id="delete" class="btn btn-danger btn-sm m-1" type="button">删除</button>
+											<button onclick="searchDoc()" class="btn btn-primary btn-sm shadow" type="button" style="margin-left: 15px; margin-top: 5px">搜索</button>
+											<button id="delete" class="btn btn-danger btn-sm shadow" type="button" style="margin-top: 5px">删除</button>
 										</div>
 									</div>
 								</td>
