--- a/src/main/resources/templates/document/showUpdateDocument.html
+++ b/src/main/resources/templates/document/showUpdateDocument.html
@@ -3,23 +3,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>人事管理系统 ——后台管理</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />
-	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3" />
-	<meta http-equiv="description" content="This is my page" />
+	<title>人事管理系统 ——后台管理</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="pragma" content="no-cache"/>
+	<meta http-equiv="cache-control" content="no-cache"/>
+	<meta http-equiv="expires" content="0"/>
+	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
+	<meta http-equiv="description" content="This is my page"/>
+	<link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+	<link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+	<link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<link href="fkjava.ico" rel="shortcut icon" type="image/x-icon" />
-	<link href="../css/css.css" type="text/css" rel="stylesheet" />
+	<link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+	<link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
 	<script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
-	<script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}" src="../js/jquery-migrate-1.2.1.js"></script>
-	<script type="text/javascript" th:src="@{../js/tiny_mce/tiny_mce.js}" src="../js/tiny_mce/tiny_mce.js"></script>
-	<script type="text/javascript" th:src="@{../js/jquery.form.js}" src="../js/jquery.form.js"></script>
-	<script type="text/javascript">
+	<script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+			src="../js/jquery-migrate-1.2.1.js"></script>
+	<link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+		  href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+	<script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+			type="text/javascript"></script>
+	<script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+			type="text/javascript"></script>
+	<script th:inline="javascript">
 
 		$(document).ready(function() {
 
@@ -29,20 +42,28 @@
 				var file = $("#file").val();
 				var detail = $("#detail").val();
 				if($.trim(title).length <= 2){
-					alert("请输入两个字符以上的标题！");
+					$.ligerDialog.alert("请输入两个字符以上的标题！");
 					return ;
 				}
 				if($.trim(detail).length == 0){
-					alert("请输入适当的文档描述！");
+					$.ligerDialog.alert("请输入适当的文档描述！");
 					return ;
 				}
 				else if(file){
-					alert("本次上传将会覆盖以前的文档！");
+					$.ligerDialog.alert("本次上传将会覆盖以前的文档！");
 				}
 
 				$("#docForm").submit();
 
 			})
+
+			$('#reset').click(function () {
+				$("#title").val("");
+				$("#file").val("");
+				$("#detail").val("");
+				$.ligerDialog.alert("输入项已清空！");
+			})
+
 		});
 
 
@@ -107,8 +128,8 @@
 					</td></tr>
 					<tr><td class="main_tdbor"></td></tr>
 					<tr><td class="font3 fftd">
-						<button type="button" class="btn btn-success" id="update">上传</button>
-						<button type="button" class="btn btn-warning" id="reset">重置</button>
+						<button type="button" class="btn btn-success btn-sm shadow" id="update">上传</button>
+						<button type="button" class="btn btn-warning btn-sm shadow" id="reset">重置</button>
 					</td></tr>
 					<tr><td class="main_tdbor"></td></tr>
 
