--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -9,19 +9,29 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
     <meta http-equiv="description" content="This is my page"/>
-    <link href="../css/css.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-    <link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-    <script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-    <link href="../css/pager.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"/>
-
-    <script type="text/javascript">
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
 
         function summit(id){
             var url = '/employee/showEmployeePage?cpage=' + id;
@@ -120,9 +130,17 @@
         <td height="10"></td>
     </tr>
     <tr>
-        <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-        <td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：员工管理 &gt; 员工查询</td>
-        <td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
+        <td width="15" height="32"></td>
+        <td class="">
+            <div class="form-horizontal">
+                <span><img src="../images/current_pos.png"></span>
+                <span class="font-weight-bolde">当前位置:</span>
+                <span class="badge badge-pill badge-dark">员工管理</span>
+                <span class="font-weight-bolde"> > </span>
+                <span class="badge badge-pill badge-secondary">员工查询</span>
+            </div>
+        </td>
+        <td width="15" height="32"></td>
     </tr>
 </table>
 
@@ -137,32 +155,87 @@
                         <table width="100%" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td class="font3">
-                                    职位：
-                                    <select name="job_id" id="job_id" style="width:143px;">
-                                        <option value="0">--请选择职位--</option>
-                                        <option th:each="job,eStat:${jobs}" th:value="${job.job_id}"
-                                                th:text="${job.job_name}"></option>
-                                    </select>
-                                    姓名：<input type="text" id="employeeName" name="name">
-                                    身份证号码：<input type="text" id="employeeCardId" name="cardId" maxlength="18">
+<!--                                    姓名：<input type="text" id="employeeName" name="name">-->
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm1">姓名</span>
+                                        </div>
+                                        <input type="text" id="employeeName" name="name" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                    </div>
                                 </td>
                             </tr>
                             <tr>
                                 <td class="font3">
-                                    性别：
-                                    <select name="sex" id="sex" style="width:143px;">
-                                        <option value="0">--请选择性别--</option>
-                                        <option value="1">男</option>
-                                        <option value="2">女</option>
-                                    </select>
-                                    手机：<input type="text" id="phone" name="phone">
-                                    所属部门：<select name="dept_id" id="dept_id" style="width:100px;">
-                                    <option value="0">--部门选择--</option>
-                                    <option th:each="department,eStat:${departments}" th:value="${department.depart_id}"
-                                            th:text="${department.depart_name}"></option>
-                                </select>&nbsp;
-                                    <input type="submit" onclick="searchEmployee()" value="搜索"/>
-                                    <input id="delete" type="button" value="删除"/>
+<!--                                    身份证号码：<input type="text" id="employeeCardId" name="cardId" maxlength="18">-->
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm2">身份证号码</span>
+                                        </div>
+                                        <input type="text" id="employeeCardId" name="cardId" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font3">
+<!--                                    手机：<input type="text" id="phone" name="phone">-->
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm3">手机号码</span>
+                                        </div>
+                                        <input type="text" id="phone" name="phone" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font3">
+<!--                                    职位：-->
+<!--                                    <select name="job_id" id="job_id" style="width:143px;">-->
+<!--                                        <option value="0">&#45;&#45;请选择职位&#45;&#45;</option>-->
+<!--                                        <option th:each="job,eStat:${jobs}" th:value="${job.job_id}"-->
+<!--                                                th:text="${job.job_name}"></option>-->
+<!--                                    </select>-->
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend" style="margin-right: 2px">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm4">职&nbsp;位</span>
+                                        </div>
+                                        <select name="job_id" id="job_id" class="input-group-text shadow">
+                                            <option value="0">--选择职位--</option>
+                                            <option th:each="job,eStat:${jobs}" th:value="${job.job_id}"
+                                                    th:text="${job.job_name}"></option>
+                                        </select>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font3">
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend" style="margin-right: 2px">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm5">性&nbsp;别</span>
+                                        </div>
+                                        <select name="sex" id="sex" class="input-group-text shadow">
+                                            <option value="0">--选择性别--</option>
+                                            <option value="1">男</option>
+                                            <option value="2">女</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                        <div class="input-group-prepend" style="margin-right: 2px">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm6">所属部门</span>
+                                        </div>
+                                        <select name="dept_id" id="dept_id" class="input-group-text shadow">
+                                            <option value="0">--部门选择--</option>
+                                            <option th:each="department,eStat:${departments}" th:value="${department.depart_id}"
+                                                    th:text="${department.depart_name}"></option>
+                                        </select>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font3">
+<!--                                    <input type="submit" onclick="searchEmployee()" value="搜索"/>-->
+<!--                                    <input id="delete" type="button" value="删除"/>-->
+                                    <button type="button" onclick="searchEmployee()" class="btn btn-primary btn-sm shadow">搜索</button>&nbsp;&nbsp;
+                                    <button type="reset" id="delete" class="btn btn-danger btn-sm shadow">删除</button>
                                 </td>
                             </tr>
                         </table>
@@ -203,15 +276,15 @@
                     <td th:text="${employee.employee_sex == 1}? '男': '女'"></td>
                     <td th:text="${employee.employee_phone}"></td>
                     <td th:text="${employee.employee_email}"></td>
-                    <td th:text="${jobs.get(employee.user_id).job_name}"></td>
+                    <td th:text="${jobMap.get(employee.employee_job_id)}"></td>
                     <td th:text="${employee.employee_edu}"></td>
                     <td th:text="${employee.employee_crad_id}"></td>
-                    <td th:text="${departments.get(employee.employee_depart_id).depart_name}"></td>
+                    <td th:text="${deptMap.get(employee.employee_depart_id)}"></td>
                     <td th:text="${employee.employee_address}"></td>
                     <td th:text="${employee.create_time}"></td>
 
                     <td align="center" width="40px;"><a th:href="'showUpdateEmployee.html?user_id=' + ${employee.user_id}">
-                        <img title="修改" src="../images/update.gif"></a>
+                        <img title="修改" src="../images/update.png"></a>
                     </td>
 
                 </tr>
