--- a/src/main/resources/templates/job/showUpdateJob.html
+++ b/src/main/resources/templates/job/showUpdateJob.html
@@ -9,17 +9,29 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
     <meta http-equiv="description" content="This is my page"/>
-    <link href="../css/css.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-    <link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-    <script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-    <link href="../css/pager.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript">
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
         function submit() {
             var name = $("#name");
             var remark = $("#remark");
@@ -51,6 +63,12 @@
             }
         }
 
+        function reset() {
+            $("#name").val("");
+            $("#remark").val("");
+            $.ligerDialog.alert("输入框已清空！");
+        }
+
 
     </script>
 </head>
@@ -77,10 +95,22 @@
                     <td class="font3 fftd">
                         <table>
                             <tr>
-                                <td class="font3 fftd">职位名称：<input type="text" name="name" id="name" size="20"
-                                                                   th:value="${job.job_name}"/></td>
-                                <td class="font3 fftd">详细描述：<input type="text" name="remark" id="remark" size="20"
-                                                                   th:value="${job.job_remark}"/></td>
+<!--                                <td class="font3 fftd">职位名称：<input type="text" name="name" id="name" size="20"-->
+<!--                                                                   th:value="${job.job_name}"/></td>-->
+<!--                                <td class="font3 fftd">详细描述：<input type="text" name="remark" id="remark" size="20"-->
+<!--                                                                   th:value="${job.job_remark}"/></td>-->
+                                <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow" id="inputGroup-sizing-sm1">职位名称：</span>
+                                    </div>
+                                    <input type="text" name="name" th:value="${job.job_name}" id="name" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                </div>
+                                <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow" id="inputGroup-sizing-sm2">详细描述：</span>
+                                    </div>
+                                    <input type="text" name="remark" th:value="${job.job_remark}" id="remark" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                </div>
                             </tr>
 
                         </table>
@@ -91,8 +121,12 @@
                 </tr>
 
                 <tr>
-                    <td align="left" class="fftd"><input type="button" onclick="submit()" value="修改 ">&nbsp;&nbsp;<input
-                            type="reset" value="取消 "></td>
+                    <td align="center" class="fftd">
+<!--                        <input type="button" onclick="submit()" value="修改 ">&nbsp;&nbsp;-->
+<!--                        <input type="reset" value="取消 ">-->
+                        <button type="button" onclick="submit()" class="btn btn-success btn-sm shadow">添加</button>&nbsp;&nbsp;
+                        <button type="reset" onclick="reset()" class="btn btn-info btn-sm shadow">取消</button>
+                    </td>
                 </tr>
             </table>
 
