--- a/src/main/resources/templates/notice/showAddNotice.html
+++ b/src/main/resources/templates/notice/showAddNotice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>人事管理系统 ——后台管理</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -8,21 +8,34 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
     <meta http-equiv="description" content="This is my page"/>
-    <link href="../css/css.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-    <link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-    <script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-    <link href="../css/pager.css" type="text/css" rel="stylesheet"/>
-    <script type="text/javascript">
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
 
         function clearValue() {
             $("#title").val("");
             $("#content").val("");
+            $.ligerDialog.alert("输入框已清空！");
         }
 
         function submit() {
@@ -67,9 +80,17 @@
         <td height="10"></td>
     </tr>
     <tr>
-        <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-        <td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：公告管理 &gt; 添加公告</td>
-        <td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
+        <td width="15" height="32"></td>
+        <td class="">
+            <div class="form-horizontal">
+                <span><img src="../images/current_pos.png"></span>
+                <span class="font-weight-bolde">当前位置:</span>
+                <span class="badge badge-pill badge-dark">公告管理</span>
+                <span class="font-weight-bolde"> > </span>
+                <span class="badge badge-pill badge-secondary">添加公告</span>
+            </div>
+        </td>
+        <td width="15" height="32"></td>
     </tr>
 </table>
 
@@ -82,10 +103,16 @@
             <input type="hidden" name="flag" value="2">
             <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
                 <tr>
-                    <td class="font3 fftd">
-                        公告标题：<input type="text" name="title" size="30" id="title"/>
-                        <span style="color: #ff0000;"></span>
-                    </td>
+                    <div class="input-group input-group-sm mb-3 w-25" style="margin-left: 600px;margin-right: 250px">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text shadow" id="inputGroup-sizing-sm1">公告标题</span>
+                        </div>
+                        <input type="text" name="title" id="title" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                    </div>
+<!--                    <td class="font3 fftd">-->
+<!--                        公告标题：<input type="text" name="title" id="title" size="30" />-->
+<!--                        <span style="color: #ff0000;"></span>-->
+<!--                    </td>-->
                 </tr>
                 <tr>
                     <td class="main_tdbor"></td>
@@ -93,7 +120,10 @@
 
                 <tr>
                     <td class="font3 fftd">公告内容：<br/>
-                        <textarea name="content" cols="88" rows="11" id="content"></textarea>
+<!--                        <textarea name="content" id="content" cols="88" rows="11" ></textarea>-->
+                        <div class="form-group" style="margin-left: 250px;margin-right: 250px">
+                            <textarea name="content" id="content" class="form-control shadow" rows="10"></textarea>
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -102,8 +132,10 @@
 
                 <tr>
                     <td class="font3 fftd">
-                        <input type="button" onclick="submit()" value="添加">
-                        <input type="button"  onclick="clearValue()" value="重置">
+<!--                        <input type="button" onclick="submit()" value="添加">-->
+<!--                        <input type="button"  onclick="clearValue()" value="重置">-->
+                        <button type="button" onclick="submit()" class="btn btn-success btn-sm shadow" id="upload">上传</button>
+                        <button type="button" onclick="clearValue()" class="btn btn-warning btn-sm shadow" id="reset">重置</button>
                     </td>
                 </tr>
                 <tr>
