--- a/src/main/resources/templates/user/showAddUser.html
+++ b/src/main/resources/templates/user/showAddUser.html
@@ -1,133 +1,193 @@
-
 <!DOCTYPE HTML>
-<html >
-	<head>
-	<title>人事管理系统——添加用户</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />    
-	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3" />
-	<meta http-equiv="description" content="This is my page" />
-	<link href="../css/css.css" type="text/css" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-	<link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-	<script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script> 
-	<script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-	<link href="../css/pager.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript">
-	
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>人事管理系统——添加用户</title>
+    <title>人事管理系统 ——后台管理</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="pragma" content="no-cache"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="expires" content="0"/>
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
+    <meta http-equiv="description" content="This is my page"/>
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
 
-    	/** 员工表单提交 */
-		function submit(){
-			var UserName = $("#username");
-			var Status = $("#status");
-			var Loginname = $("#loginname");
-			var password = $("#password");
-			var msg = "";
-			if ($.trim(UserName.val()) == ""){
-				msg = "姓名不能为空！";
-				UserName.focus();
-			}else if ($.trim(Loginname.val()) == ""){
-				msg = "登录名不能为空！";
-				Loginname.focus();
-			}else if($.trim(Loginname.val()).length<6 || $.trim(Loginname.val()).length>20){
-				msg = "登录名需要大于6位小于20位！";
-				Loginname.focus();
-			}else if ($.trim(password.val()) == ""){
-				msg = "密码不能为空！";
-				password.focus();
-			}
-			if (msg != ""){
-				$.ligerDialog.error(msg);
-				return false;
-			}else{
-				var userData = UserName.val().trim() + ":" + Loginname.val().trim() +":" + password.val().trim() + ":" + Status.val().trim();
-				$.ajax({
-					type: "POST",
-					url: "/user/addUser",
-					traditional: true,
-					data:userData,
-					dataType: "json",
-					contentType: "application/json;charset=UTF-8",
-					error: function (XMLHttpRequest, textStatus, errorThrown) {
-						alert("消息","出错了，请于管理员联系");
-					},
-					success: function (json) {
-						$.ligerDialog.alert("注册成功");
-					}
-				});
-			}
-		}
- 
-		
 
-	</script>
+        /** 员工表单提交 */
+        function submit() {
+            var UserName = $("#username");
+            var Status = $("#status");
+            var Loginname = $("#loginname");
+            var password = $("#password");
+            var msg = "";
+            if ($.trim(UserName.val()) == "") {
+                msg = "姓名不能为空！";
+                UserName.focus();
+            } else if ($.trim(Loginname.val()) == "") {
+                msg = "登录名不能为空！";
+                Loginname.focus();
+            } else if ($.trim(Loginname.val()).length < 6 || $.trim(Loginname.val()).length > 20) {
+                msg = "登录名需要大于6位小于20位！";
+                Loginname.focus();
+            } else if ($.trim(password.val()) == "") {
+                msg = "密码不能为空！";
+                password.focus();
+            }
+            if (msg != "") {
+                $.ligerDialog.error(msg);
+                return false;
+            } else {
+                var userData = UserName.val().trim() + ":" + Loginname.val().trim() + ":" + password.val().trim() + ":" + Status.val().trim();
+                $.ajax({
+                    type: "POST",
+                    url: "/user/addUser",
+                    traditional: true,
+                    data: userData,
+                    dataType: "json",
+                    contentType: "application/json;charset=UTF-8",
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        alert("消息", "出错了，请于管理员联系");
+                    },
+                    success: function (json) {
+                        $.ligerDialog.alert("注册成功！");
+                    }
+                });
+            }
+        }
+
+        /** 员工表单重置 */
+        function reset() {
+            $('#username').val("");
+            $('#loginname').val("");
+            $('#password').val("");
+            $.ligerDialog.alert("信息已经清空！");
+        }
+
+    </script>
 </head>
-<body  class="layout-fixed">
+<body class="layout-fixed">
 <script language="JavaScript">
-			var context="/hrm",__contextPath="/hrm",__extendOptions="main/options";
-		</script>
+    var context = "/hrm", __contextPath = "/hrm", __extendOptions = "main/options";
+</script>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-  <tr><td height="10"></td></tr>
-  <tr>
-    <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-	<td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：用户管理  &gt; 添加用户</td>
-	<td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
-  </tr>
+    <tr>
+        <td height="10"></td>
+    </tr>
+    <tr>
+        <td width="15" height="32"></td>
+        <td class="">
+            <div class="form-horizontal">
+                <span><img src="/images/current_pos.png"></span>
+                <span class="font-weight-bolde">当前位置:</span>
+                <span class="badge badge-pill badge-dark">用户管理</span>
+                <span class="font-weight-bolde"> > </span>
+                <span class="badge badge-pill badge-secondary">添加用户</span>
+            </div>
+        </td>
+        <td width="15" height="32"></td>
+    </tr>
 </table>
 <table width="100%" height="90%" border="0" cellpadding="5" cellspacing="0" class="main_tabbor">
-  <tr valign="top">
-    <td>
-    
-    	 	<!-- 隐藏表单，flag表示添加标记 -->
-    	 	<input type="hidden" name="flag" value="2">
-		  <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
-		    <tr><td class="font3 fftd">
-		    	<table>
-		    		<tr>
-		    			<td class="font3 fftd">姓&nbsp;名：<input type="text" name="username" id="username" size="20"/></td>
-		    			
-		    			
-		    			<td class="font3 fftd">状&nbsp;态：
+    <tr valign="top">
+        <td>
 
-							<select name="status" id="status" >
-								  <option value ="1">管理员</option>
-								  <option value ="2">普通用户</option>
+            <!-- 隐藏表单，flag表示添加标记 -->
+            <input type="hidden" name="flag" value="2">
+            <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
+                <tr>
+                    <td class="font3 fftd">
+                        <table>
+                            <tr>
+                                <!--                                <td class="font3 fftd">姓&nbsp;名：<input type="text" name="username" id="username"-->
+                                <!--                                                                       size="20"/></td>-->
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow"
+                                              id="inputGroup-sizing-sm1">姓&nbsp;名：</span>
+                                    </div>
+                                    <input type="text" name="username" id="username" class="form-control shadow"
+                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                </div>
 
-							</select>
-						</td>
-		    		</tr>
-		    			
-		    		<tr>
-		    			<td class="font3 fftd">登录名：<input name="loginname" id="loginname" size="20" /></td>
-		    			<td class="font3 fftd">密&nbsp;码：<input name="password" id="password" size="20" /></td>
-		    			
-		    		</tr>
-		    		
-		    	</table>
-		    </td></tr>
-			<tr><td class="main_tdbor"></td></tr>
-			
-			<tr>
-			<td align="left" class="fftd">
-			<input type="button" onclick="submit()" value="添加">&nbsp;&nbsp;
-			<input type="reset" value="取消 ">&nbsp;&nbsp;
-			</td>
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend" style="margin-right: 2px">
+                                        <span class="input-group-text shadow"
+                                              id="inputGroup-sizing-sm2">状&nbsp;态：</span>
+                                    </div>
+                                    <select name="status" id="status" class="input-group-text shadow">
+                                        <option value="1">管理员</option>
+                                        <option value="2">普通用户</option>
+                                    </select>
+                                </div>
 
-			</tr>
-		  </table>
-		
-	</td>
-  </tr>
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow" id="inputGroup-sizing-sm3">登录名：</span>
+                                    </div>
+                                    <input type="text" name="loginname" id="loginname" class="form-control shadow"
+                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                </div>
+
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow"
+                                              id="inputGroup-sizing-sm4">密&nbsp;码：</span>
+                                    </div>
+                                    <input type="text" name="password" id="password" class="form-control shadow"
+                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                </div>
+                            </tr>
+
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="main_tdbor"></td>
+                </tr>
+
+                <tr>
+                    <div style="margin-left: 600px;margin-right: 250px">
+                        <td align="center" class="fftd">
+                            <!--                        <input type="button" onclick="submit()" value="添加">-->
+                            <button type="button" onclick="submit()" class="btn btn-success btn-sm shadow">添加</button>&nbsp;&nbsp;
+                            <!--                        <input type="reset" value="取消 ">&nbsp;&nbsp;-->
+                            <button type="reset" onclick="reset()" class="btn btn-info btn-sm shadow">重置</button>&nbsp;&nbsp;
+                        </td>
+                    </div>
+                </tr>
+            </table>
+
+        </td>
+    </tr>
 </table>
 <div style="height:10px;"></div>
 
-		
 
 </body>
 </html>
