--- a/src/main/resources/templates/user/showUpdateUser.html
+++ b/src/main/resources/templates/user/showUpdateUser.html
@@ -1,119 +1,184 @@
 <!DOCTYPE HTML>
-<html>
-	<head>
-	<title>人事管理系统——修改用户</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />    
-	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3" />
-	<meta http-equiv="description" content="This is my page" />
-	<link href="../css/css.css" type="text/css" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-	<link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-	<script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script> 
-	<script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-	<script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-	<link href="../css/pager.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript">
-	
-function submit(){
-		// $("#status").val($("#sta").val());
-    	/** 员工表单提交 */
-		
-			var username = $("#username");
-			var status = $("#status");
-			var loginname = $("#loginname");
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>人事管理系统——修改用户</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="pragma" content="no-cache"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="expires" content="0"/>
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
+    <meta http-equiv="description" content="This is my page"/>
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
 
-			var msg = "";
-			if ($.trim(username.val()) == ""){
-				msg = "姓名不能为空！";
-				username.focus();
-			}else if ($.trim(loginname.val()) == ""){
-				msg = "登录名不能为空！";
-				loginname.focus();
-			}else if($.trim(loginname.val()).length<6 || $.trim(loginname.val()).length>20){
-				msg = "登录名需要大于6位小于20位！";
-				loginname.focus();
-			}
-			if (msg != ""){
-				$.ligerDialog.error(msg);
-				return false;
-			}else{
-				var id = document.getElementById("sta");
-				var data = id.value + ":" + username.val() + ":" + status.val().trim() + ":" + loginname.val().trim();
-				$.ajax({
-					type:"post",
-					url:"/user/updateUser",
-					data:data,
-					contentType: "application/json;charset=UTF-8",
-					dataType:"json",
-					error: function (XMLHttpRequest, textStatus, errorThrown) {
-						$.ligerDialog.error("出错了，请于管理员联系");
-					},
-					success:function(json){ // 此处的json是返回的数据
-						$.ligerDialog.alert("修改成功");
-					}
-				});
-			}
-	
-}
-		
+        function submit() {
+            // $("#status").val($("#sta").val());
+            /** 员工表单提交 */
 
-	</script>
+            var username = $("#username");
+            var status = $("#status");
+            var loginname = $("#loginname");
+
+            var msg = "";
+            if ($.trim(username.val()) == "") {
+                msg = "姓名不能为空！";
+                username.focus();
+            } else if ($.trim(loginname.val()) == "") {
+                msg = "登录名不能为空！";
+                loginname.focus();
+            } else if ($.trim(loginname.val()).length < 6 || $.trim(loginname.val()).length > 20) {
+                msg = "登录名需要大于6位小于20位！";
+                loginname.focus();
+            }
+            if (msg != "") {
+                $.ligerDialog.error(msg);
+                return false;
+            } else {
+                var id = document.getElementById("sta");
+                var data = id.value + ":" + username.val() + ":" + status.val().trim() + ":" + loginname.val().trim();
+                $.ajax({
+                    type: "post",
+                    url: "/user/updateUser",
+                    data: data,
+                    contentType: "application/json;charset=UTF-8",
+                    dataType: "json",
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        $.ligerDialog.error("出错了，请于管理员联系");
+                    },
+                    success: function (json) { // 此处的json是返回的数据
+                        $.ligerDialog.alert("修改成功");
+                    }
+                });
+            }
+
+        }
+
+
+    </script>
 </head>
 <body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-  <tr><td height="10"></td></tr>
-  <tr>
-    <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-	<td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：用户管理  &gt; 修改用户</td>
-	<td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
-  </tr>
+    <tr>
+        <td height="10"></td>
+    </tr>
+    <tr>
+        <td width="15" height="32"></td>
+        <td class="">
+            <div class="form-horizontal">
+                <span><img src="../images/current_pos.png"></span>
+                <span class="font-weight-bolde">当前位置:</span>
+                <span class="badge badge-pill badge-dark">用户管理</span>
+                <span class="font-weight-bolde"> > </span>
+                <span class="badge badge-pill badge-secondary">修改用户</span>
+            </div>
+        </td>
+        <td width="15" height="32"></td>
+    </tr>
 </table>
 <table width="100%" height="90%" border="0" cellpadding="5" cellspacing="0" class="main_tabbor">
-  <tr valign="top">
-    <td>
-    	 
-    	 	<!-- 隐藏表单，flag表示添加标记 -->
-    	 	<input type="hidden" name="flag" value="2">
-			<input type="hidden" name="id" value="${user.id }">
-		  <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
-		    <tr><td class="font3 fftd">
-		    	<table>
-		    		<tr>
-		    			<td class="font3 fftd">姓名：<input type="text" name="username" id="username" size="20" th:value="${user.UserName}"/></td>
-		    			<td class="font3 fftd">状态：
-		    				<select name="status" id="status" >
-								  <option value ="1">管理员</option>
-								  <option value ="2" th:selected = "${user.Status}==2? 'selected'">普通用户</option>
+    <tr valign="top">
+        <td>
 
-							</select>
-							<input type="hidden" name="sta" id="sta"  th:value="${user.user_id}" />
-							</td>
-							
-		    		</tr>
-		    			
-		    		<tr>
-		    			<td class="font3 fftd">登录名：
-		    			<input name="loginname" id="loginname" size="20" th:value="${user.Loginname}"/>
-		    			<input type="hidden" name="password" id="password" size="20" value="songyq"/>
-		    			</td>
-		    			
-		    		</tr>
-		    		
-		    	</table>
-		    </td></tr>
-			<tr><td class="main_tdbor"></td></tr>
-			
-			<tr><td align="left" class="fftd"><input type="button" onclick="submit()" value="修改 ">&nbsp;&nbsp;<input type="reset" value="取消 "></td></tr>
+            <!-- 隐藏表单，flag表示添加标记 -->
+            <input type="hidden" name="flag" value="2">
+            <input type="hidden" name="id" value="${user.id }">
+            <table width="100%" border="0" cellpadding="0" cellspacing="10" class="main_tab">
+                <tr>
+                    <td class="font3 fftd">
+                        <table>
+                            <tr>
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow"
+                                              id="inputGroup-sizing-sm1">姓&nbsp;名：</span>
+                                    </div>
+                                    <input type="text" name="username" id="username" th:value="${user.UserName}"
+                                           class="form-control shadow" aria-label="Sizing example input"
+                                           aria-describedby="inputGroup-sizing-sm">
+                                </div>
+                                <!--		    			<td class="font3 fftd">姓名：<input type="text" name="username" id="username" size="20" th:value="${user.UserName}"/></td>-->
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow"
+                                              id="inputGroup-sizing-sm2">状&nbsp;态：</span>
+                                    </div>
+                                    <select name="status" id="status" class="input-group-text shadow">
+                                        <option value="1">管理员</option>
+                                        <option value="2" th:selected="${user.Status}==2? 'selected'">普通用户</option>
+                                    </select>
+                                    <input type="hidden" name="sta" id="sta" th:value="${user.user_id}"/>
+                                </div>
+                                <!--						<td class="font3 fftd">状态：-->
+                                <!--		    				<select name="status" id="status" >-->
+                                <!--								  <option value ="1">管理员</option>-->
+                                <!--								  <option value ="2" th:selected = "${user.Status}==2? 'selected'">普通用户</option>-->
 
-	</td>
-  </tr>
-</table>
-<div style="height:10px;"></div>
+                                <!--							</select>-->
+                                <!--							<input type="hidden" name="sta" id="sta"  th:value="${user.user_id}" />-->
+                                <!--							</td>-->
+
+                            </tr>
+
+                            <tr>
+                                <div class="input-group input-group-sm mb-3 w-25"
+                                     style="margin-left: 600px;margin-right: 250px">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text shadow" id="inputGroup-sizing-sm3">登录名：</span>
+                                    </div>
+                                    <input type="hidden" name="password" id="password" size="20" value="songyq"/>
+                                    <input type="text" name="loginname" id="loginname" th:value="${user.Loginname}"
+                                           class="form-control shadow" aria-label="Sizing example input"
+                                           aria-describedby="inputGroup-sizing-sm">
+                                </div>
+                                <!--		    			<td class="font3 fftd">登录名：-->
+                                <!--		    			<input name="loginname" id="loginname" size="20" th:value="${user.Loginname}"/>-->
+                                <!--		    			<input type="hidden" name="password" id="password" size="20" value="songyq"/>-->
+                                <!--		    			</td>-->
+
+                            </tr>
+
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="main_tdbor"></td>
+                </tr>
+
+                <tr>
+                    <td align="center" class="fftd">
+                        <button type="button" onclick="submit()" class="btn btn-success btn-sm shadow">修改</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <!--                        <input type="reset" value="取消 ">&nbsp;&nbsp;-->
+                        <!--				<button type="reset" onclick="reset()" class="btn btn-info btn-sm">重置</button>-->
+                    </td>
+                </tr>
+
+                </td>
+                </tr>
+            </table>
+            <div style="height:10px;"></div>
 </body>
 </html>
