--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -6,6 +6,7 @@
     function search(){
         var username = $("#username").val();
         var status = $("#status").val();
+
         var url = '/user/userSearch?username=' + username + '&status=' + status;
         $.ajax({
             url: url,
@@ -23,19 +24,29 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3"/>
     <meta http-equiv="description" content="This is my page"/>
-    <link href="../css/css.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css"/>
-    <link href="../js/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="../js/jquery-1.11.0.js"></script>
-    <script type="text/javascript" src="../js/jquery-migrate-1.2.1.js"></script>
-    <script src="../js/ligerUI/js/core/base.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDrag.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerDialog.js" type="text/javascript"></script>
-    <script src="../js/ligerUI/js/plugins/ligerResizable.js" type="text/javascript"></script>
-    <link href="../css/pager.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
-
-    <script type="text/javascript">
+    <link th:href="@{../css/css.css}" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"/>
+    <link th:href="@{../js/ligerUI/skins/ligerui-icons.css}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link th:href="@{../css/css.css}" href="../css/css.css" type="text/css" rel="stylesheet"/>
+    <link th:href="@{../css/pager.css}" href="../css/pager.css" type="text/css" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{../js/jquery-1.11.0.js}" src="../js/jquery-1.11.0.js"></script>
+    <script type="text/javascript" th:src="@{../js/jquery-migrate-1.2.1.js}"
+            src="../js/jquery-migrate-1.2.1.js"></script>
+    <link th:href="@{../js/ligerUI/skins/Aqua/css/ligerui-dialog.css}"
+          href="../js/ligerUI/skins/Aqua/css/ligerui-dialog.css" rel="stylesheet" type="text/css"/>
+    <script th:src="@{../js/ligerUI/js/core/base.js}" src="../js/ligerUI/js/core/base.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDialog.js}" src="../js/ligerUI/js/plugins/ligerDialog.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerDrag.js}" src="../js/ligerUI/js/plugins/ligerDrag.js"
+            type="text/javascript"></script>
+    <script th:src="@{../js/ligerUI/js/plugins/ligerResizable.js}" src="../js/ligerUI/js/plugins/ligerResizable.js"
+            type="text/javascript"></script>
+    <script th:inline="javascript">
 
         function summit(id) {
             var url = '/user/showPage?cpage=' + id;
@@ -121,9 +132,17 @@
         <td height="10"></td>
     </tr>
     <tr>
-        <td width="15" height="32"><img src="../images/main_locleft.gif" width="15" height="32"></td>
-        <td class="main_locbg font2"><img src="../images/pointer.gif">&nbsp;&nbsp;&nbsp;当前位置：用户管理 &gt; 用户查询</td>
-        <td width="15" height="32"><img src="../images/main_locright.gif" width="15" height="32"></td>
+        <td width="15" height="32"></td>
+        <td class="">
+            <div class="form-horizontal">
+                <span><img src="/images/current_pos.png"></span>
+                <span class="font-weight-bolde">当前位置:</span>
+                <span class="badge badge-pill badge-dark">用户管理</span>
+                <span class="font-weight-bolde"> > </span>
+                <span class="badge badge-pill badge-secondary">用户查询</span>
+            </div>
+        </td>
+        <td width="15" height="32"></td>
     </tr>
 </table>
 
@@ -138,14 +157,26 @@
                         <table width="100%" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td class="font3">
-                                    用户名：<input type="text" id="username" name="username">
-                                    用户状态：<select name="status" id="status">
-                                    <option value="0">全部</option>
-                                    <option value="1">管理员</option>
-                                    <option value="2">普通用户</option>
-                                </select>
-                                    <input type="submit" onclick="search()" value="搜索"/>
-                                    <input id="delete" type="button" value="删除"/>
+<!--                                    用户名：<input type="text" id="username" name="username">-->
+                                    <div class="input-group input-group-sm mb-3 w-25" style="margin-right: 50px">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text shadow" id="inputGroup-sizing-sm">用户名：</span>
+                                        </div>
+                                        <input type="text" id="username" name="username" class="form-control shadow" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                                        <div class="input-group-prepend">
+                                            <select class="input-group-text shadow" name="status" id="status">
+                                                <option value="0">全部</option>
+                                                <option value="1">管理员</option>
+                                                <option value="2">普通用户</option>
+                                            </select>
+                                        </div>
+<!--                                        <input type="submit" onclick="search()" value="搜索"/>-->
+                                        <button style="margin-left: 15px" type="submit" onclick="search()" class="btn btn-primary btn-sm shadow">搜索</button>
+<!--                                        <input id="delete" type="button" value="删除"/>-->
+                                        <button style="margin-left: 7px" type="button" id="delete" class="btn btn-danger btn-sm shadow">删除</button>
+                                    </div>
+
+
                                 </td>
                             </tr>
                         </table>
@@ -188,7 +219,7 @@
 
                     <td align="center" width="80px;"><a
                             th:href="@{'showUpdateUser.html' + '?' + user_id + '=' + ${user.user_id}}">
-                        <img title="修改" src="../images/update.gif"></a>
+                        <img title="修改" src="../images/update.png"></a>
                     </td>
 
                 </tr>
